--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,135 @@
+*{
+  margin: 0;
+padding: 0;
+
+
+
+background-color: white;
+
+}
+.full{
+  height: 100%;
+  width: 100%;
+}
+
+
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  margin-left: 25%;
+  /* border: 3px red solid; */
+  width: 50%;
+  height: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ 
+ 
+  background-color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+
+
+.nav {
+  /* border:2px green solid; */
+  width: 50%;
+  height: 15%; 
+  /* background-color: blue; */
+  display: flex;
+  /* justify-content: center; */
+  flex-direction: row;
+  margin-left: 25%;
+  position: sticky;
+  top:0;
+  position: -webkit-sticky;
+ 
+
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav ul{
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: flex-start;
+ 
+}
+.nav ul li {
+  text-decoration: none;
+ list-style-type: none;
+
+  
+
+}
+
+#logo{
+  height: 100px;
+  width: 150px;
+  /* margin-right: 420px; */
+
+ 
+}
+.icons {
+  display: flex;
+/* border: 2px solid yellow; */
+  margin-left: auto;
+  width: 30%;
+  height: 50%;
+ align-items: center;
+ justify-content: space-around;
+
+
+
+}
+
+
+.icons li{
+ 
+}
+
+
+.storydiv{
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  margin-left: 25%;
+  /* border: 3px pink solid; */
+  margin-bottom: 40px;
+
+
+}
+.Story{
+  display: flex;
+  /* border: 3px red solid; */
+  width: 100%;
+  justify-content: space-around;
+
+   
+}
+
+.Story img {
+  border-radius: 50%;
+}
+
+.profileImg {
+  border-radius: 50%;
+}
+
+.profileUser {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  margin-top: 5px;
+  
+}
+
+.profileUser h4 {
+  margin-left: 10px;
+}
+
+.tile{
+  margin-bottom: 50px;
+}
+
+#nameptag{
+  font-size: small;
 }
